products/developer-portal/cd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developer-portal
  namespace: developer-portal
  labels:
    app.kubernetes.io/name: "developer-portal"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "developer-portal"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "developer-portal"
    spec:
      containers:
        - image: developer-portal
          name: developer-portal
          ports:
            - containerPort: 80
