products/developer-portal/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zilliqa-devportal
  namespace: devportal
  labels:
    "app.kubernetes.io/name": "zilliqa-devportal"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": "zilliqa-devportal"
