products/developer-portal/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zilliqa-devportal
  namespace: devportal
  labels:
    "app.kubernetes.io/name": "zilliqa-devportal"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zilliqa-devportal
                port:
                  number: 80
    - host: dev.zilliqa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zilliqa-devportal
                port:
                  number: 80
